<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context="com.vp.tipcalculatormy.MainActivity" >

    <TextView
        android:id="@+id/amauntTextView"
        android:layout_gravity="right"
        android:labelFor="@+id/amountEditText"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="6" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/amauntDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/textView_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/customPercentTextView"
        android:layout_gravity="right"
        android:text="@string/custom_tip_percenteg"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/customSeekBar"
        android:layout_width="match_parent"
        android:layout_gravity="fill_horizontal" />

    <LinearLayout
        android:id="@+id/percentLinearLayout"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/percent15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/percentCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eighteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/tipTextView"
        android:layout_gravity="right"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/tipLinearLayout"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/tip15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/totalTextView"
        android:layout_gravity="right"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/totalLinearLayout"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/total15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</GridLayout>
